[package]
name = "rml_example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "mousearea"
path = "src/mousearea_test.rs"

[[bin]]
name = "component"
path = "src/component_test.rs"

[[bin]]
name = "dollar"
path = "src/dollar_syntax_test.rs"

[[bin]]
name = "outch"
path = "src/outch_test.rs"


[dependencies]
rml_core = { path = "../rml_core" }
rml_macros = { path = "../rml_macros" }
macroquad = { version = "0.4.14" }